fixing extra scrollbars

--- a/gemp-lotr/gemp-lotr-async/src/main/web/css/gemp-001/hall.css
+++ b/gemp-lotr/gemp-lotr-async/src/main/web/css/gemp-001/hall.css
@@ -174,7 +174,7 @@ textarea, input {
 	flex-grow: 3;
 	gap: 5px;
 	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .ui-tabs-panel {
